--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="contact-grid">
                 <div class="contact-card">
                     <i class="fas fa-map-marker-alt"></i>
-                    <div><strong>السكن:</strong> ليبيا</div>
+                    <div><strong>السكن:</strong> طرابلس - ابوسليم</div>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-phone"></i>
